fix layout flex & spacing

--- a/src/widgets/Property/Property.module.scss
+++ b/src/widgets/Property/Property.module.scss
@@ -2,7 +2,6 @@
 @import "@classes";
 
 .property {
-  margin-top: 156px;
   &Body {
     display: flex;
     gap: 20px;
